--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "ai-chat-website",
+  "name": "stargaze-ai",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "dev": "vercel dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "vercel": "^28.0.0"
   }
 }
