--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
+  "version": 2,
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/chat.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/api/chat", "dest": "/api/chat" }
+  ],
+  "env": {
+    "DEEPSEEK_API_KEY": "@deepseek-api-key"
+  }
 }
