--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     { "src": "/", "dest": "/public/index.html" },
-    { "src": "/api/chat", "dest": "/api/chat" }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ],
   "env": {
-    "DEEPSEEK_API_KEY": "@deepseek-api-key"
+-    "DEEPSEEK_API_KEY": "@deepseek-api-key"
++    "DEEPSEEK_API_KEY": "@DEEPSEEK_API_KEY"
   }
 }
