--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,6 @@
     { "src": "/api/(.*)", "dest": "/api/$1" }
   ],
   "env": {
--    "DEEPSEEK_API_KEY": "@deepseek-api-key"
-+    "DEEPSEEK_API_KEY": "@DEEPSEEK_API_KEY"
+    "DEEPSEEK_API_KEY": "YOUR_API_KEY_SECRET_NAME"
   }
 }
