--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "stargaze-ai",
-  "version": "1.0.0",
   "scripts": {
     "dev": "vercel dev"
   },
   "dependencies": {
-    "openai": "^4.0.0",
-    "dotenv": "^16.0.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
-    "vercel": "^28.0.0"
+    "@vercel/node": "^2.15.4"
   }
 }
